Add cli to build a solution space